src/fhiclcpp/fhiclcpp/test/testFiles/fail/prolog4_fail.fcl
BEGIN_PROLOG
x: 4
END_PROLOG
g: 87
BEGIN_PROLOG
h: 12
END_PROLOG
